# fast_forecast

./: README.md  __init__.py  pyproject.toml
fast_forecast/: __init__.py  mco_forecast.py
